Ada 232 (#56): Ensure the contrast between foreground and background colors meets WCAG 2 AA minimum contrast ratio thresholds
* login, listed items updated

* Improving the color contrast ratio of button links to meet WCAG 2AA

* Improve the color contrast ration of span text to meet WCAG 2AA

* Improve the color contrast ration in the ISO19139 metadata modal

* Improve the color contrast ration of span number to meet WCAG 2AA

--- a/app/assets/stylesheets/_customizations.scss
+++ b/app/assets/stylesheets/_customizations.scss
@@ -1,7 +1,6 @@
-
-.ucb_container{
+.ucb_container {
   min-height: 100%;
-  width: 100%;  
+  width: 100%;
   margin-bottom: 90px;
 }
 
@@ -9,6 +8,39 @@
   height: 90px;
 }
 
-.navbar {  
-  height: 6em;  
+.navbar {
+  height: 6em;
+}
+
+.btn-primary {
+  background-color: $link-color;
+  color: #ffffff;
+}
+
+ul.facet-values {
+  span.selected {
+    color: #208836 !important;
+  }
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show>.nav-link,
+.nav-pills .no-js .btn-group:focus-within .dropdown-menu>.nav-link,
+.nav-pills .no-js .btn-group:focus-within .twitter-typeahead .tt-menu>.nav-link,
+.twitter-typeahead .nav-pills .no-js .btn-group:focus-within .tt-menu>.nav-link,
+.no-js .btn-group:focus-within .nav-pills .dropdown-menu>.nav-link,
+.no-js .btn-group:focus-within .nav-pills .twitter-typeahead .tt-menu>.nav-link,
+.twitter-typeahead .no-js .btn-group:focus-within .nav-pills .tt-menu>.nav-link {
+  background-color: $link-color;
+}
+
+#metadata-container {
+  a {
+    color: #006FD6;
+
+    &:hover {
+      color: #0044B3;
+      text-decoration: underline;
+    }
+  }
 }
