--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+$link-color: #0073EB;
 @import 'bootstrap';
 @import 'blacklight';
 @import 'geoblacklight';
